typescript/checker/tests/conformance/types/tuple/wideningTuples5.ts.stderr
error: ImplicitAny {
    span: Span {
        lo: BytePos(
            29,
        ),
        hi: BytePos(
            30,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/tuple/wideningTuples5.ts:2:6
  |
2 | var [a, b] = [undefined, null];
  |      ^

error: ImplicitAny {
    span: Span {
        lo: BytePos(
            32,
        ),
        hi: BytePos(
            33,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/tuple/wideningTuples5.ts:2:9
  |
2 | var [a, b] = [undefined, null];
  |         ^

